the startup issues boil down to posix.isatty()